--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,10 +33,9 @@ theme:
       toggle:
         icon: material/toggle-switch-off-outline
         name: Light mode
-
   extra:
-  social:
-    - icon: fontawesome/brands/github
+    social:
+      - icon: fontawesome/brands/github
       link: https://github.com/FTS427
 
 plugins: 
@@ -51,9 +50,6 @@ markdown_extensions:
   - toc:
       permalink: true
   - footnotes
-  - meta
-  - def_list
-  - pymdownx.arithmatex
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
@@ -65,3 +61,25 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tasklist
   - pymdownx.tilde
+
+nav:
+  - 欢迎！: index.md
+  - 关于我: about_me.md
+  - 感谢列表: thx.md
+  - 我的服务器: 
+    - ZH-Server: Minecraft/ZHS.md
+    - ZH-Server-Faster: Minecraft/ZHS-F.md
+    - 游戏环境注意: Minecraft/gaming_env.md
+    - 管理员注意事项: Minecraft/op_rules.md
+    - 黑名单: Minecraft/no_play.md
+  - 链接: links.md
+  - 技术性文档: 
+    - Archlinux相关: 
+      - Archlinux简介: tech-docs/archlinux/archlinux_info.md
+      - Archlinux安装: tech-docs/archlinux/archlinux_install.md
+    - Android相关:
+      - TB-X306FC_PRC:
+        - 设备简介: tech-docs/android/lenovo/device_info.md
+    - 其它工具: 
+      - MKdocs文档网站框架: tech-docs/tools/mkdocs.md
+
