U | tech-docs | update add pictures

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,13 +72,13 @@ nav:
     - 游戏环境基础原则: Minecraft/gamimg_env.md
     - 管理员注意事项: Minecraft/op_rules.md
     - 黑名单: Minecraft/no_play.md
-  - 链接: links.md
+  - 友链: links.md
   - 小记: 
     - 引入: blog/index.md
   - 技术性文档: 
     - 前言: tech-docs/index.md
     - Archlinux相关: 
-      - Archlinux简介: tech-docs/archlinux/archlinux_info.md
+      - Archlinux酱: tech-docs/archlinux/archlinux_info.md
       - Archlinux安装: tech-docs/archlinux/archlinux_install.md
     - Android相关:
       - TB-X306FC_PRC:
@@ -87,4 +87,4 @@ nav:
         - 结完BL后干点啥: tech-docs/android/lenovo/after_unlockbl.md
         - 刷系统: tech-docs/android/lenovo/flash_system.md
     - 其它工具: 
-      - MKdocs文档网站框架: tech-docs/tools/mkdocs.md
+      - MKdocs网站框架: tech-docs/tools/mkdocs.md
