--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ nav:
   - 感谢列表: thx.md
   - 我的服务器: 
     - ZH-Server: Minecraft/ZHS.md
-    - ZH-Server-Faster: Minecraft/ZHS-F.md
+    - Zn-Server: Minecraft/ZHS-F.md
     - ZH-Server资源: Minecraft/resource_zh.md
     - 服务器贡献人员: Minecraft/gaming_thx.md
     - 游戏环境基础原则: Minecraft/gamimg_env.md
