U | config | update nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,7 @@ nav:
   - 我的服务器: 
     - ZH-Server: Minecraft/ZHS.md
     - Zn-Server: Minecraft/ZnS.md
-    - ZH-Server资源: Minecraft/resource_zh.md
+    - 服务器资源: Minecraft/resource.md
     - 服务器贡献人员: Minecraft/gaming_thx.md
     - 游戏环境基础原则: Minecraft/gamimg_env.md
     - 管理员注意事项: Minecraft/op_rules.md
