--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,9 +65,9 @@ nav:
   - 欢迎！: index.md
   - 关于我: about_me.md
   - 感谢列表: thx.md
-  - 我的服务器: 
+  - Minecraft服务器: 
     - ZH-Server: Minecraft/ZHS.md
-    - Zn-Server（已关闭）: Minecraft/ZnS.md
+    - Zn-Server（已终结）: Minecraft/ZnS.md
     - 服务器所包含资源: Minecraft/resource.md
     - 服务器贡献人员: Minecraft/gaming_thx.md
     - 游戏环境基础原则: Minecraft/gamimg_env.md
