D | mkdocs.yml | verit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ markdown_extensions:
   - pymdownx.smartsymbols
   - pymdownx.superfences
   - pymdownx.tilde
-  - pymdownx.snippets
+  #- pymdownx.snippets
   - pymdownx.highlight:
       anchor_linenums: true
       auto_title: true
