U | update ZHS and some styles

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
     - 服务器贡献人员: Minecraft/gaming_thx.md
     - 游戏环境基础原则: Minecraft/gamimg_env.md
     - 管理员注意事项: Minecraft/op_rules.md
+    - ZH-Server 资源: Minecraft/ZHS_resource.md
     - 游戏黑名单: Minecraft/no_play.md
   - 友链: links.md
   - 小记: 
