--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://www.fts427.top/
 repo_url: https://github.com/FTS427/FTS427.github.io
 repo_name: FTS427/FTS427.github.io
 edit_uri: edit/main/docs/
-copyright: Copyright &copy; 2022 - 2024 Huang FTS427
+copyright: Copyright &copy; 2022 - 2025 Huang FTS427
 theme:
   custom_dir: overrides
   name: material
@@ -91,7 +91,9 @@ nav:
         - 解 BL 锁后干点啥: tech-docs/android/lenovo/after_unlockbl.md
         - 刷 GSI 系统: tech-docs/android/lenovo/flash_gsi_system.md
         - 刷系统: tech-docs/android/lenovo/flash_stock_system.md
-        - 让我们编译: tech-docs/android/lenovo/build_rom/index.md
+        - 让我们编译: 
+          - tech-docs/android/lenovo/build_rom/index.md
+          - 编译 Lineage OS: tech-docs/android/lenovo/build_rom/lineage_build.md
       - OPPO A31t: 
         - 设备信息: tech-docs/android/oppo/device_info.md
         - 刷机: tech-docs/android/oppo/flash_system.md
