--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,7 +107,7 @@ nav:
   - 感谢列表: thx.md
   - Minecraft 服务器:
       - ZH-Server: Minecraft/ZHS.md
-      - Zn-Server（已终结）: Minecraft/ZnS.md
+      - Zn-Server: Minecraft/ZnS.md
       - 服务器贡献人员: Minecraft/gaming_thx.md
       - 游戏环境基础原则: Minecraft/gamimg_env.md
       - 管理员注意事项: Minecraft/op_rules.md
