--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
-name: ci 
+name: Build Website 
 on:
   push:
     branches:
-      - master 
       - main
 permissions:
   contents: write
@@ -25,5 +24,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mkdocs-git-authors-plugin mkdocs-glightbox mkdocs-rss-plugin
+      - run: pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mkdocs-git-authors-plugin mkdocs-glightbox
       - run: mkdocs gh-deploy --force
