--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Huang FTS427's Website
 site_url: https://www.fts427.top/
 site_description: >-
   This is Huang FTS427's website, 
-  it's about my Minecraft server, technological docs and my daily life.
+  which record my Minecraft server, technological documents and my daily life.
 site_author: Huang FTS427
 repo_url: https://github.com/FTS427/FTS427.github.io
 repo_name: FTS427/FTS427.github.io
@@ -106,7 +106,7 @@ markdown_extensions:
 
 nav:
   - 欢迎！: index.md
-  - 关于我: about_me.md
+  - 关于我: about_me/about_me.md
   - 感谢列表: thx.md
   - Minecraft 服务器:
       - ZH-Server: Minecraft/ZHS.md
@@ -122,7 +122,7 @@ nav:
   - 技术文档:
       - 前言: tech-docs/index.md
       - Archlinux 相关:
-          - Archlinux 酱: tech-docs/archlinux/archlinux_info.md
+          - Archlinux 酱: tech-docs/archlinux/archlinux_info/archlinux_info.md
           - Archlinux 安装: tech-docs/archlinux/archlinux_install.md
       - Android相关:
           - 前言: tech-docs/android/index.md
@@ -131,7 +131,7 @@ nav:
               - 刷机资源: tech-docs/android/lenovo/resource.md
               - 解 BL 锁: tech-docs/android/lenovo/unlock_bl.md
               - 解 BL 锁后干点啥: tech-docs/android/lenovo/after_unlockbl.md
-              - 刷 GSI 系统: tech-docs/android/lenovo/flash_gsi_system.md
+              - 刷 GSI 系统: tech-docs/android/lenovo/flash_gsi_system/flash_gsi_system.md
               - 刷系统: tech-docs/android/lenovo/flash_stock_system.md
           - OPPO A31t:
               - 设备信息: tech-docs/android/oppo/device_info.md
@@ -141,4 +141,4 @@ nav:
       - 其它工具:
           - MKdocs 网站框架: tech-docs/tools/mkdocs.md
           - Scoop 包管理器: tech-docs/tools/scoop_use.md
-          - LL_Easier 快速打包 LeviLamina: tech-docs/tools/ll_easier.md
+          - LL_Easier 快速打包 LeviLamina: tech-docs/tools/ll_easier/ll_easier.md
